Portfolio page modification

--- a/css/css.css
+++ b/css/css.css
@@ -833,7 +833,7 @@ ul {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  background: #FF4500;
+  background: #C0C0C0;
   color: #fff;
   font-size: 14px;
   text-align: center;
