--- a/css/css.css
+++ b/css/css.css
@@ -197,7 +197,7 @@ body {
     width: 100%;
     height: 100vh;
     background-color: #f2f3f5;
-    background: url(../images/me.jpg) top right no-repeat;
+    background: url(../images/DSC_5249.JPG) top right no-repeat;
     background-size: cover;
     position: relative;
     padding-left: 160px;
